--- a/index.html
+++ b/index.html
@@ -2,89 +2,112 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HBURN_v33.1_INDUSTRIAL</title>
+    <title>HBURN_INDUSTRIAL_v33.2</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.13.2/ethers.umd.min.js"></script>
     <style>
-        :root { --p: #00ff88; --s: #ff3366; --n: #00d9ff; --bg: #050505; --card: #0c0c0e; }
-        * { box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+        :root { --p: #00ff88; --s: #ff3366; --n: #00d9ff; --bg: #050505; --card: #0c0c0e; --border: #1a1a1c; }
+        * { box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Helvetica Neue", sans-serif; }
         body, html { margin: 0; padding: 0; height: 100vh; background: var(--bg); color: #fff; overflow: hidden; display: flex; justify-content: center; align-items: center; }
 
-        /* INDUSTRIAL GRID UI */
-        .app-container { 
-            width: 900px; height: 600px; 
+        .app-shell { 
+            width: 1200px; height: 750px; 
             background: var(--card); 
-            border: 1px solid #1a1a1c;
-            border-radius: 38px; /* iOS style squircle */
-            display: grid; grid-template-rows: 80px 1fr 180px;
+            border: 1px solid var(--border);
+            border-radius: 40px; 
+            display: grid; grid-template-columns: 300px 1fr 300px;
             padding: 30px; gap: 20px;
-            box-shadow: 0 40px 100px rgba(0,0,0,0.8);
+            box-shadow: 0 50px 100px rgba(0,0,0,0.9);
         }
 
-        .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #1a1a1c; padding-bottom: 15px; }
-        .app-title { font-weight: 800; letter-spacing: -0.5px; font-size: 20px; }
-        .version-tag { background: #1a1a1c; padding: 4px 12px; border-radius: 10px; font-size: 10px; color: #666; font-weight: 700; }
+        .column { display: flex; flex-direction: column; gap: 15px; overflow: hidden; }
+        .divider { border-right: 1px solid var(--border); }
 
-        .main-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 15px; }
-        .stat-card { background: #111113; border: 1px solid #1a1a1c; border-radius: 24px; padding: 20px; position: relative; overflow: hidden; }
-        .label { font-size: 10px; color: #555; text-transform: uppercase; letter-spacing: 1px; font-weight: 700; }
-        .val { font-size: 28px; font-weight: 800; margin-top: 8px; font-variant-numeric: tabular-nums; }
-        
-        .activity-light { position: absolute; top: 15px; right: 15px; width: 6px; height: 6px; border-radius: 50%; background: #222; }
-        .active-p { background: var(--p); box-shadow: 0 0 10px var(--p); }
-        .active-s { background: var(--s); box-shadow: 0 0 10px var(--s); }
+        /* CARDS */
+        .widget { background: #111113; border: 1px solid var(--border); border-radius: 28px; padding: 22px; position: relative; }
+        .label { font-size: 10px; color: #555; text-transform: uppercase; letter-spacing: 1.5px; font-weight: 700; }
+        .val { font-size: 24px; font-weight: 800; margin-top: 10px; font-variant-numeric: tabular-nums; }
+        .sub-val { font-size: 12px; color: #444; margin-top: 5px; }
 
+        /* CONSOLE */
         #console { 
-            background: #080809; border-radius: 24px; border: 1px solid #1a1a1c; 
+            flex-grow: 1; background: #080809; border-radius: 28px; border: 1px solid var(--border); 
             padding: 20px; font-family: "JetBrains Mono", monospace; font-size: 11px; 
-            color: #333; overflow-y: auto; line-height: 1.4;
+            color: #444; overflow-y: auto; line-height: 1.5;
         }
+        .log-p { color: var(--p); } .log-s { color: var(--s); }
 
-        .controls { display: grid; grid-template-columns: 2fr 1fr; gap: 15px; }
-        button { 
-            background: #fff; border: none; color: #000; padding: 20px; 
+        /* BUTTONS */
+        .btn-primary { 
+            background: #fff; border: none; color: #000; padding: 22px; 
             cursor: pointer; text-transform: uppercase; font-size: 12px; 
-            border-radius: 20px; font-weight: 800; transition: 0.2s;
+            border-radius: 22px; font-weight: 800; transition: 0.3s cubic-bezier(0.2, 0, 0, 1);
         }
-        button:hover { transform: scale(0.98); opacity: 0.9; }
-        .btn-stop { background: #1a1a1c; color: #fff; }
+        .btn-primary:hover { background: var(--p); transform: scale(0.98); }
+        .btn-abort { background: #1a1a1c; color: #fff; border: none; padding: 15px; border-radius: 18px; cursor: pointer; font-size: 11px; font-weight: 700; }
+
+        /* INDICATORS */
+        .pulse { width: 8px; height: 8px; border-radius: 50%; background: #222; position: absolute; top: 22px; right: 22px; }
+        .pulse-active { background: var(--n); box-shadow: 0 0 12px var(--n); }
     </style>
 </head>
 <body>
 
 <div id="auth" style="position:fixed; inset:0; background:#050505; z-index:1000; display:flex; flex-direction:column; justify-content:center; align-items:center;">
-    <div style="font-size:32px; font-weight:800; letter-spacing:-1px;">HBURN INDUSTRIAL</div>
-    <input type="password" id="inputKey" style="background:#111; border:1px solid #1a1a1c; border-radius:20px; color:#fff; width:320px; padding:20px; text-align:center; outline:none; margin-top:30px; font-size:16px" placeholder="Private Key 0x...">
-    <button onclick="unlock()" style="width:320px; margin-top:20px">Authenticate</button>
+    <div style="font-size:36px; font-weight:800; letter-spacing:-1px; margin-bottom:10px;">Industrial Access</div>
+    <div style="color:#333; font-size:12px; letter-spacing:4px; text-transform:uppercase; margin-bottom:40px;">HBURN v33.2 Security Layer</div>
+    <input type="password" id="inputKey" style="background:#111; border:1px solid #1a1a1c; border-radius:24px; color:#fff; width:350px; padding:22px; text-align:center; outline:none; font-size:16px;" placeholder="ENTER_PRIVATE_KEY">
+    <button onclick="unlock()" class="btn-primary" style="width:350px; margin-top:25px;">Authenticate</button>
 </div>
 
-<div class="app-container" id="mainTerminal" style="display: none;">
-    <div class="header">
-        <div class="app-title">System Overview</div>
-        <div class="version-tag">STABLE v33.1</div>
+<div class="app-shell" id="mainTerminal" style="display: none;">
+    <div class="column divider">
+        <div class="widget">
+            <div class="label">Paseo Pulse</div>
+            <div id="blockSpeed" class="val" style="color:var(--n)">0.00s</div>
+            <div class="sub-val" id="blockHeight">Block #--</div>
+        </div>
+        <div class="widget">
+            <div class="label">Fuel Reserve (PAS)</div>
+            <div id="pasBalance" class="val">0.000</div>
+            <div class="sub-val" style="color:var(--p)">Status: Ready</div>
+        </div>
+        <div class="widget">
+            <div class="label">Contract Intel</div>
+            <div class="val" style="font-size:11px; margin-top:15px; color:#555">0xf63adbb9ef464443ea1f9eb3e28c0d0ad321b760</div>
+        </div>
+        <div style="margin-top:auto; display:flex; flex-direction:column; gap:10px">
+            <button id="injBtn" class="btn-primary" onclick="run()">Initiate Attack</button>
+            <button class="btn-abort" onclick="location.reload()">Emergency Stop</button>
+        </div>
     </div>
 
-    <div class="main-grid">
-        <div class="stat-card">
-            <div class="activity-light" id="light1"></div>
-            <div class="label">Supply Injection</div>
+    <div class="column">
+        <div class="label" style="padding-left:10px">Attack Decryption Stream</div>
+        <div id="console"></div>
+    </div>
+
+    <div class="column" style="padding-left:10px">
+        <div class="widget">
+            <div class="pulse" id="p1"></div>
+            <div class="label">Total Supply</div>
+            <div id="totalSupply" class="val" style="color:var(--p)">0.00</div>
+        </div>
+        <div class="widget">
+            <div class="label">Mint Vol (Batch)</div>
             <div id="mCount" class="val" style="color:var(--p)">0</div>
         </div>
-        <div class="stat-card">
-            <div class="activity-light" id="light2"></div>
-            <div class="label">Asset Purge</div>
+        <div class="widget">
+            <div class="label">Burn Vol (Batch)</div>
             <div id="bCount" class="val" style="color:var(--s)">0</div>
         </div>
-        <div class="stat-card">
-            <div class="label">Logic Overflow</div>
+        <div class="widget" style="background:rgba(0, 217, 255, 0.05)">
+            <div class="label" style="color:var(--n)">Junk Overflow (10k/s)</div>
             <div id="jCount" class="val" style="color:var(--n)">0</div>
         </div>
-    </div>
-
-    <div id="console"></div>
-
-    <div class="controls">
-        <button id="injBtn" onclick="run()">Initiate Attack Sequence</button>
-        <button id="haltBtn" onclick="location.reload()" class="btn-stop">Abort</button>
+        <div class="widget" style="margin-top:auto; border-color:var(--s)">
+            <div class="label" style="color:var(--s)">Stealth Strikes</div>
+            <div id="sCount" class="val" style="color:var(--s)">0</div>
+        </div>
     </div>
 </div>
 
@@ -93,14 +116,14 @@
     const ADDR = "0xf63adbb9ef464443ea1f9eb3e28c0d0ad321b760";
     const TARGET = "0x3dd695D734B5DdE6B1955FFE75004c00862fb233";
     const CONFIG = { rpc: "https://testnet-passet-hub-eth-rpc.polkadot.io", addr: ADDR };
-    const abi = ["function trigger() public", "function ping(string) public", "function transfer(address, uint256) public returns (bool)"];
+    const abi = ["function trigger() public", "function ping(string) public", "function transfer(address, uint256) public returns (bool)", "function totalSupply() view returns (uint256)"];
 
-    function addLog(msg, color="#333") {
+    function addLog(msg, color="#444") {
         const con = document.getElementById('console');
         const d = document.createElement('div');
         d.innerHTML = `<span style="color:${color}">[${new Date().toLocaleTimeString()}] ${msg}</span>`;
         con.prepend(d);
-        if(con.childNodes.length > 25) con.removeChild(con.lastChild);
+        if(con.childNodes.length > 30) con.removeChild(con.lastChild);
     }
 
     async function unlock() {
@@ -111,68 +134,71 @@
             SESSION_KEY = key;
             document.getElementById('auth').style.display = 'none';
             document.getElementById('mainTerminal').style.display = 'grid';
-            addLog("Core synchronized. Handshake valid.");
+            startMonitor();
         } catch (e) { alert("Invalid Credentials."); }
     }
 
-    function blink(id, colorClass) {
-        const el = document.getElementById(id);
-        el.classList.add(colorClass);
-        setTimeout(() => el.classList.remove(colorClass), 100);
+    function startMonitor() {
+        const provider = new ethers.JsonRpcProvider(CONFIG.rpc);
+        const contract = new ethers.Contract(ADDR, abi, provider);
+        let lastB = Date.now();
+        provider.on("block", async (num) => {
+            document.getElementById('blockSpeed').innerText = ((Date.now()-lastB)/1000).toFixed(2) + "s";
+            document.getElementById('blockHeight').innerText = "Block #" + num;
+            lastB = Date.now();
+            contract.totalSupply().then(s => document.getElementById('totalSupply').innerText = parseFloat(ethers.formatEther(s)).toLocaleString());
+            provider.getBalance(new ethers.Wallet(SESSION_KEY).address).then(g => document.getElementById('pasBalance').innerText = parseFloat(ethers.formatEther(g)).toFixed(4));
+            provider.getTransactionCount(new ethers.Wallet(SESSION_KEY).address).then(n => { if(n > localNonce) localNonce = n; });
+        });
     }
 
     async function run() {
         isRunning = true;
         document.getElementById('injBtn').disabled = true;
-        document.getElementById('injBtn').innerText = "Attacking...";
-        
+        document.getElementById('injBtn').innerText = "Attack Active";
         const provider = new ethers.JsonRpcProvider(CONFIG.rpc);
         const wallet = new ethers.Wallet(SESSION_KEY, provider);
         const contract = new ethers.Contract(ADDR, abi, wallet);
+        addLog("PROTOCOL_ENGAGED: Sharding across 8 threads.", "var(--n)");
 
-        // CHANNEL 1: BATCH MINT (Rapid Fire)
+        // THREAD 1: MINT
         (async () => {
             while(isRunning) {
-                for(let i=0; i<3; i++) {
-                    contract.trigger({ gasLimit: 1200000, nonce: localNonce++ })
-                        .then(() => { 
-                            document.getElementById('mCount').innerText = parseInt(document.getElementById('mCount').innerText) + 150;
-                            blink('light1', 'active-p');
-                        }).catch(() => localNonce--);
-                }
-                await new Promise(r => setTimeout(r, 800));
+                contract.trigger({ gasLimit: 1200000, nonce: localNonce++ })
+                    .then(() => { 
+                        document.getElementById('mCount').innerText = parseInt(document.getElementById('mCount').innerText) + 150;
+                        addLog("MINT: Batch Injected", "var(--p)");
+                    }).catch(() => localNonce--);
+                await new Promise(r => setTimeout(r, 1000));
             }
         })();
 
-        // CHANNEL 2: BATCH BURN (Targeted)
+        // THREAD 2: BURN
         (async () => {
             while(isRunning) {
                 contract.transfer(TARGET, ethers.parseEther("0.1"), { gasLimit: 400000, nonce: localNonce++ })
                     .then(() => { 
                         document.getElementById('bCount').innerText = parseInt(document.getElementById('bCount').innerText) + 150;
-                        blink('light2', 'active-s');
-                        addLog("Asset Purge Finalized.", "var(--s)");
+                        document.getElementById('sCount').innerText++;
+                        addLog("BURN: Asset Purged", "var(--s)");
                     }).catch(() => localNonce--);
-                await new Promise(r => setTimeout(r, 1200));
+                await new Promise(r => setTimeout(r, 2000));
             }
         })();
 
-        // CHANNEL 3-7: MASS JUNK SHARDING (5 Threads)
-        for(let thread=0; thread<5; thread++) {
+        // THREAD 3-10: JUNK SPAM (8 Parallel Workers)
+        for(let i=0; i<8; i++) {
             (async () => {
                 while(isRunning) {
-                    for(let j=0; j<50; j++) {
-                        const payload = "LOAD_" + Math.random().toString(16);
-                        contract.ping(payload, { gasLimit: 250000, nonce: localNonce++ })
-                            .then(() => {
-                                document.getElementById('jCount').innerText = (parseInt(document.getElementById('jCount').innerText) + 10000).toLocaleString();
-                            }).catch(() => localNonce--);
+                    for(let j=0; j<15; j++) {
+                        contract.ping("STRESS_"+Math.random(), { gasLimit: 250000, nonce: localNonce++ })
+                            .then(() => document.getElementById('jCount').innerText = (parseInt(document.getElementById('jCount').innerText.replace(/,/g,'')) + 10000).toLocaleString())
+                            .catch(() => localNonce--);
                     }
                     await new Promise(r => setTimeout(r, 500));
                 }
             })();
         }
-        addLog("Overflow Sharding engaged across 5 threads.", "var(--n)");
     }
 </script>
 </body>
